--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,8 @@
     padding: 0;
 }
 body{
-    font-family: sans-serif;    
+    font-family: sans-serif;
+    background-color: #9c9a9a;    
 }
 
 .container{
