--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button color="#124536" text="Add Task" (btnClick)="toggleAddTask()"></app-button>
+    <app-button color="#021f2e" text="Add Task" (btnClick)="toggleAddTask()"></app-button>
 </header>
