--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ body{
 .btn {
     display: inline-block;
     background: #000;
-    color: #fff;
+    color: #CCFFFF;
     border: none;
     padding: 10px 20px;
     margin: 5px;
