--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -4,6 +4,7 @@
         <fa-icon 
             [icon]="faTimes"
             class="icon"
+            (click)="onDelete(task)"
         ></fa-icon>
     </h3>
     <p>{{task.day}}</p>
