--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,8 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button color="#021f2e" text="Add Task" (btnClick)="toggleAddTask()"></app-button>
+    <app-button 
+        color="{{showAddTask ? '#2e1f02' : '#021f2e' }}" 
+        text="{{showAddTask ? 'Close Task' : 'Add Task' }}"
+        (btnClick)="toggleAddTask()"
+    ></app-button>
 </header>
