--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,6 +1,6 @@
 <form 
     class="add-form" 
-    (ngSubmit)="onSubmit()" 
+    (ngSubmit)="onSubmit($event)" 
     autocomplete="off"
     *ngIf="showAddTask"
 >
@@ -8,18 +8,30 @@
         <label for="text">Task</label>
         <input 
             type="text" 
-            name="text" 
+            formControlName="text" 
             id="text" 
             placeholder="add Task"
+            required minlength="8"
             [(ngModel)]="text"
-            >
+            class="form-control"
+    >
+        <!-- <div *ngIf="text.invalid && (text.dirty || text.touched)" class="alert">    
+            <div *ngIf="text?.hasError('required')" class="alert">
+                La Tarea es requerida.
+            </div>
+            <div *ngIf="text?.hasError('minlength')" class="alert">
+                El formato de la tarea es invalido.
+            </div>
+        </div> -->
+
     </div>
+    
 
     <div class="form-control">
         <label for="day">Day</label>
         <input 
             type="date"
-            name="day" id="day" 
+            formControlName="day" id="day" 
             placeholder="add day & time"
             [(ngModel)]="day"
             >
@@ -29,7 +41,7 @@
         <label for="reminder">Reminder</label>
         <input 
             type="checkbox" 
-            name="reminder" 
+            formControlName="reminder" 
             id="reminder"
             [(ngModel)]="reminder"
             >
