--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,6 +1,6 @@
 <form 
     class="add-form" 
-    (ngSubmit)="onSubmit($event)" 
+    (ngSubmit)="onSubmit()" 
     autocomplete="off"
     *ngIf="showAddTask"
 >
@@ -8,21 +8,13 @@
         <label for="text">Task</label>
         <input 
             type="text" 
-            formControlName="text" 
+            name="text" 
             id="text" 
             placeholder="add Task"
             required minlength="8"
             [(ngModel)]="text"
-            class="form-control"
+            
     >
-        <!-- <div *ngIf="text.invalid && (text.dirty || text.touched)" class="alert">    
-            <div *ngIf="text?.hasError('required')" class="alert">
-                La Tarea es requerida.
-            </div>
-            <div *ngIf="text?.hasError('minlength')" class="alert">
-                El formato de la tarea es invalido.
-            </div>
-        </div> -->
 
     </div>
     
@@ -31,7 +23,7 @@
         <label for="day">Day</label>
         <input 
             type="date"
-            formControlName="day" id="day" 
+            name="day" id="day" 
             placeholder="add day & time"
             [(ngModel)]="day"
             >
@@ -41,11 +33,11 @@
         <label for="reminder">Reminder</label>
         <input 
             type="checkbox" 
-            formControlName="reminder" 
+            name="reminder" 
             id="reminder"
             [(ngModel)]="reminder"
             >
     </div>
 
-    <input type="submit" value="Save task" class="btn btn-block">
+    <input type="submit" value="Save task" class="btn btn-block btn-submit">
 </form>
