--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <h1>{{title}}</h1>
     <app-button 
-        color="{{showAddTask ? '#2e1f02' : '#021f2e' }}" 
+        color="{{showAddTask ? 'var(--colorBotonRojo)' : 'var(--colorBotonVerde)' }}" 
         text="{{showAddTask ? 'Close Task' : 'Add Task' }}"
         (btnClick)="toggleAddTask()"
     ></app-button>
