--- a/src/app/components/add-task/add-task.component.css
+++ b/src/app/components/add-task/add-task.component.css
@@ -5,3 +5,62 @@
 .btn-submit {
     background-color: var(--colorBotonVerde);
 }
+
+.alert {
+    color: var(--colorBotonRojo);
+    font-weight: 600;
+}
+
+.form-control>label{
+    font-weight: 600;
+}
+
+.form-control>input {
+    background-color: var(--colorCeleste);
+    border: 3px solid var(--colorPrincipal);
+    border-radius: 4px;
+}
+
+input[type="checkbox"]{
+    display: none;
+}
+
+input[type="checkbox"] + label {
+    font-weight: bold;
+    line-height: 3em;
+    color: var(--colorOscuro);
+}
+input[type="checkbox"]:checked + label {
+    color: var(--colorBotonVerde);
+}
+
+input[type="checkbox"] + label::before {
+	content: "";
+	width: 26px;
+	height: 26px;
+	float: left;
+	margin: 0.5em 0.5em 0 0;
+	border: 2px solid var(--colorOscuro);
+	background: var(--colorCeleste);
+}
+
+input[type="checkbox"]:checked + label::before {
+	border-color: var(--colorBotonVerde);
+}
+
+input[type="checkbox"]:checked + label::after {
+    content: "";
+    width: 12px;
+    height: 6px;
+    border: 4px solid var(--colorBotonVerde);
+    float: left;
+    margin-left: -1.95em;
+    border-right: 0;
+    border-top: 0;
+    margin-top: 1em;
+    transform: rotate(-55deg);
+}
+
+input[type="date"]{
+    color: var(--colorOscuro);;
+}
