--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -12,14 +12,20 @@
             name="text"
             formControlName="text"
             id="text" 
-            placeholder="add Task"
+            placeholder="Asignr una Tarea"
             required minlength="8"
             [(ngModel)]="text"
             
     >
-
     </div>
-    
+    <div *ngIf="Text?.errors  && Text?.touched">    
+        <p *ngIf="Text?.hasError('required')" class="alert">
+            La tarea es requerida!
+        </p>
+        <p *ngIf="Text?.hasError('minlength')" class="alert">
+            El formato de la tarea es invalido!
+        </p>
+    </div>
 
     <div class="form-control">
         <label for="day">Day</label>
@@ -28,18 +34,17 @@
             name="day"
             formControlName="day" 
             id="day" 
-            placeholder="add day & time"
+            value="2022-05-05"
             [(ngModel)]="day"
             >
     </div>
-    <!-- <div *ngIf="text?.errors  && text?.touched">    
-        <p *ngIf="text?.hasError('required')" class="error">
-            La tarea es requerida
+    <div *ngIf="Day?.errors  && Day?.touched">    
+        <p *ngIf="Day?.hasError('required')" class="alert">
+            Agregue una fecha valida para la tarea!
         </p>
-    </div> -->
+    </div>
 
     <div class="form-control form-control-check">
-        <label for="reminder">Reminder</label>
         <input 
             type="checkbox" 
             name="reminder"
@@ -47,12 +52,8 @@
             id="reminder"
             [(ngModel)]="reminder"
             >
+        <label for="reminder">Reminder</label>
     </div>
-    <!-- <div *ngIf="day?.errors  && day?.touched">    
-        <p *ngIf="day?.hasError('required')" class="error">
-            La tarea es requerida
-        </p>
-    </div> -->
-
+    
     <input type="submit" value="Save task" class="btn btn-block btn-submit">
 </form>
