--- a/src/app/components/task-item/task-item.component.css
+++ b/src/app/components/task-item/task-item.component.css
@@ -2,6 +2,7 @@
     background-color: var(--colorPrincipal);
     margin: 5px;
     padding: 10px 20px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
