agregado de footer y ruta para ir a about

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+<footer>
+    <p class="copyright">Copyright: Matias Galeano @2022</p>
+    <div class="social">
+        <a href="https://twitter.com/MatiGaleanoDev" target="_blank" class="social-icon twitter">
+            <fa-icon [icon]="faTwitter"></fa-icon>
+        </a>
+        <a href="https://www.linkedin.com/in/matigaleanodev/" target="_blank" class="social-icon linkedin">
+            <fa-icon [icon]="faLinkedin"></fa-icon>
+        </a>
+        <a href="https://github.com/MatiGaleano" target="_blank" class="social-icon github">
+            <fa-icon [icon]="faGithub"></fa-icon>
+        </a>
+    </div>
+    <a routerLink="about" class="about">About</a>
+</footer>
