--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,5 +4,6 @@
         color="{{showAddTask ? 'var(--colorBotonRojo)' : 'var(--colorBotonVerde)' }}" 
         text="{{showAddTask ? 'Close Task' : 'Add Task' }}"
         (btnClick)="toggleAddTask()"
+        *ngIf="hasRoute('/')"
     ></app-button>
 </header>
