--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer>
     <p class="copyright">Copyright: Matias Galeano @2022</p>
     <div class="social">
-        <a href="https://twitter.com/MatiGaleanoDev" target="_blank" class="social-icon twitter">
-            <fa-icon [icon]="faTwitter"></fa-icon>
+        <a href="https://instagram.com/matigaleanodev" target="_blank" class="social-icon instagram">
+            <fa-icon [icon]="faInstagram"></fa-icon>
         </a>
         <a href="https://www.linkedin.com/in/matigaleanodev/" target="_blank" class="social-icon linkedin">
             <fa-icon [icon]="faLinkedin"></fa-icon>
