--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,44 +1,51 @@
 .copyright {
-    margin-top: auto;
-    padding: 1rem;
-    text-align: center;
-    color: #777;
+  margin-top: auto;
+  padding: 1rem;
+  text-align: center;
+  color: #777;
 }
 
 .social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 .social-icon {
-    display: flex;
-    padding-top: 0.15rem;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.2rem;
-    color: var(--colorClaro);
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-
+  display: flex;
+  padding-top: 0.15rem;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  color: var(--colorClaro);
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
 }
-.twitter {
-    background-color: #1da1f2;
+.instagram {
+  background: linear-gradient(
+    150deg,
+    #405de6,
+    #833ab4,
+    #c13584,
+    #e1306c,
+    #fd1d1d
+  );
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
 }
 .github {
-    background-color: #24292e;
+  background-color: #24292e;
 }
 .linkedin {
-    background-color: #0077b5;
+  background-color: #0077b5;
 }
-.about{
-    align-items: center;
-    color: var(--colorBotonVerde);
-    text-decoration: none;
-    font-weight: 600;
-    transition: all 0.3s ease;
+.about {
+  align-items: center;
+  color: var(--colorBotonVerde);
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.3s ease;
 }
-.about:hover{
-    color: var(--colorOscuro);
+.about:hover {
+  color: var(--colorOscuro);
 }
