--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -29,7 +29,7 @@
     <div class="form-control">
         <label for="day">Day</label>
         <input 
-            type="date"
+            type="datetime-local"
             name="day"
             formControlName="day" 
             id="day" 
