--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -11,5 +11,5 @@
             (click)="onDelete(task)"
         ></fa-icon>
     </h3>
-    <p>{{task.day}}</p>
+    <p>{{task.day | date:'dd/MM/yyy, h:mm'}}</p>
 </div>
